try to conform to google style

--- a/cpp_notebook/primer/ch-03.md
+++ b/cpp_notebook/primer/ch-03.md
@@ -37,9 +37,9 @@ int main() {
 ~~~
 // how i initialize a string
 string s1; // default initialization to the empty string
-string s2 = s1; // s2 is a copy of s1 (copy initialized)
-string s3 = "value"; // s3 is a copy of the string literal (copy initialized)
-string s4(n, 'c'); // initialize s4 with n copies of the character 'c' (direct initialized)
+string s2(s1); // s2 is a copy of s1
+string s3("value"); // s3 is a copy of the string literal
+string s4(n, 'c'); // initialize s4 with n copies of the character 'c'
 ~~~
 
 - classes can define how objects are created/initialized, operations that are called by name, and what various operator symbols (<<, +, etc.) mean when applied to objects of the class' type.
@@ -124,10 +124,10 @@ cout << punct_cnt << '\n';
 ~~~
 // how i initialize a vector
 vector<T> v1; // default initialize empty vector of type T
-vector<T> v2 = v1; // v2 has a copy of each element in v1
+vector<T> v2(v1); // v2 has a copy of each element in v1
 vector<T> v3 = {a, b, c}; // v3 is copy-list-initialized
 vector<T> v4(n, val); // v4 has n elements each with value val
-vector<T> v5(n); // v5 has n elements each with type T's value-initializing value
+vector<T> v5(n); // v5 has n elements each with type T's value-initializer
 vector<T> v6(begin(myIntArray), end(myIntArray)); // v6 is a vector corresponding to a separate int array
 ~~~
 
@@ -276,7 +276,7 @@ int myMatrix[3][4] = {
 };
 myMatrix[1][3] = 7; // assign previously default-initialized element to 7
 
-// references are necessary to avoid automatic array-to-pointer conversion!
+// references are necessary to avoid automatic array-to-pointer decay!
 for (auto &row : myMatrix) {
 	for (auto &col : row) {
 		col *= 2;
