--- a/cpp_notebook/primer/ch-06.md
+++ b/cpp_notebook/primer/ch-06.md
@@ -22,7 +22,7 @@
 		- [value initialized](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-02.md#variables-22) if no initializer.
 		- subsequent calls ignore(?) the initialization statement because the variable already exists (initialization is not assignment!).
 ~~~
-size_t count_calls() {
+size_t CountCalls() {
 	static size_t ctr = 0;
 	return ++ctr;
 }
@@ -30,7 +30,7 @@ size_t count_calls() {
 int main() {
 	// prints the numbers from 1 through 10 inclusive
 	for (size_t i = 0; i != 10; ++i) {
-		cout << count_calls() << '\n';
+		cout << CountCalls() << '\n';
 	}
 	return 0;
 }
@@ -140,12 +140,13 @@ int main() {
 	- names used as default arguments are resolved in the scope of the function declaration and evaluated at the time of the call.
 		- local variables may not be used as a default argument.
 - ***inline* functions** avoid function call overhead.
+	- meant to optimize **small**, straight-line functions that are called frequently.
 	- specifying the *inline* keyword before the function return type will make the request to the compiler.
-	- meant to optimize small, straight-line functions that are called frequently.
 - ***constexpr* functions** are implicitly-*inline* functions that can be used in a [constant expression](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-02.md#const-qualifier-24).
+	- meant to define true constants or to ensure constant initialization.
 	- the return type and the type of each parameter must be a literal type (arithmetic types, references, and pointers).
 	- the function must contain exactly one return statement. 
-		- other statements must generate no actions at runtime (i.e. type aliases).
+		- other statements must generate no actions at runtime (i.e. type aliases are allowed).
 	- **constexpr functions will only return a constant expression if its argument is a constant expression**, otherwise it just acts as a normal function.
 - debugging aids
 	- the ***assert*** preprocessor macro in the *cassert* header terminates a program if the expression it receives is false (i.e., zero).
@@ -178,7 +179,7 @@ int main() {
 - a function's type is determined by its return type and the types of its parameters
 ~~~
 // function declaration
-bool lengthCompare (const string &, const string &);
+bool LengthCompare (const string &, const string &);
 
 // declaration of pf, which is a pointer to a function with the above type
 bool (*pf)(const string &, const string &);
@@ -186,8 +187,5 @@ bool (*pf)(const string &, const string &);
 - when we use the name of a function, the function is automatically converted to a pointer.
 	- address-of and dereference operators are unnecessary when assigning / using a pointer to a function.
 - details in Primer on using pointers to functions as parameter and return types.
-
-### misc conventions and tips
-- hi
 
 ## things to follow up on
