--- a/cpp_notebook/primer/ch-07.md
+++ b/cpp_notebook/primer/ch-07.md
@@ -16,14 +16,14 @@
 	- member functions access the object on which they were called through an implicit const pointer (to the object) named *this*.
 		- inside the member function, we can refer directly to the members of the object on which the function was called.
 			- *memberName* is equivalent to an implicit *this->memberName*
-	- we can also return a dereferenced *this* to return the object as a whole from a function.
+	- we can also return a dereferenced *this* to return the object as a whole from a member function.
 		- recall from ch6, **use a reference function-return-type to return the object (in this case, *&ast;this*) as an lvalue.** (returns the object itself, not a temporary copy of the object)
 			- doing this allows us to chain calls (i.e. multiple dot operators) to **nonconst** member functions on the same object.
 			- a const member function that returns **this* as a reference should have a return type that is reference to const. 
 				- these can't be chained with other "action" functions, as they would return the object with an added const restriction.
 - ***const* member functions**
 	- const member functions have the keyword *const* following the parameter list in the function declaration.
-	- changes *this* from the default const pointer to nonconst to a const pointer to const.
+	- changes *this* from the default *const pointer to nonconst* to a *const pointer to const*.
 		- the body of a const member function is restricted from changing the object on which it is called.
 		- a const object (and references/pointers to const objects) may only call const member functions.
 - **by default, copying a class object copies each member of that object.**
@@ -44,9 +44,6 @@
 	- when we create a const object of a class type, the object does not assume its "constness" until after the constructor completes the object's intialization.
 - **default constructor**
 	- the default constructor of a class controls [default initialization *and* value initialization](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-02.md#variables-22) on objects of the class-type.
-		- **when <ins>using</ins> a class, don't confuse an object declaration with a function declaration!**
-			- *MyClass obj();* declares a MyClass-returning function with no parameters.
-			- *MyClass obj;* creates a default-initialized object of type MyClass.
 	- a default constructor takes no arguments (usually has no parameters).
 		- a constructor that supplies default arguments for all its parameters also defines the default constructor.
 	- ***synthesized* default constructor**
@@ -66,14 +63,14 @@
 			- this doesn't work for members that are references, are *const*, or are of a class-type that does not have a default constructor, so these types **must** be initialized in the constructor intializer list!
 				- recall references and const cannot be assigned after initialization.
 ~~~
-class Sales_data {
+class SalesData {
 public:
 	// default constructor requests synthesized default constructor
-	Sales_data() = default;
+	SalesData() = default;
 	
-	// (inline) constructor definition with constructor initializer list
+	// (inline) constructor definition with constructor initializer list.
 	// empty body only because there's no further work
-	Sales_data(unsigned new_sold, double price):
+	SalesData(unsigned new_sold, double price):
 		units_sold_(new_sold), revenue_(price*new_sold) { }
 
 private:
@@ -92,28 +89,28 @@ private:
 		- delegating constructors can only have a single entry that is the other constructor.
 ~~~
 // all constructors are implicitly inline in this case (bad practice? idk)
-class Sales_data {
+class SalesData {
 public:
 	// nondelegating constructor A
-	Sales_data(std::string id, unsigned new_sold, double price):
+	SalesData(std::string id, unsigned new_sold, double price):
 		units_sold_(new_sold), revenue_(price*new_sold), id_(id) {
-		// this specific constructor can specify commands to do a backflip
+		// this specific constructor can specify additional commands like do a backflip
 	}
 	
-	// default constructor as a delegating constructor (delegates work to A)
+	// default constructor as a delegating constructor (delegates work to A).
 	// this unnecessarily overrides the in-class initializers below (bad practice!)
 	// but this is just an example
-	Sales_data(): 
-		Sales_data("", 0, 0) { 
+	SalesData(): 
+		SalesData("", 0, 0) { 
 		// initializes members according to constructor A
 		// automatically does a backflip as specified in constructor A
 		
-		// this specific constructor specify further commands like do a pushup
+		// this specific constructor can specify further commands like do a pushup
 	}
 	
 	// other constructor as a delegating constructor (delegates work to A)
-	Sales _data(std::string id): 
-		Sales_data(id, 0, 0) {
+	SalesData(std::string id): 
+		SalesData(id, 0, 0) {
 		// initializes members according to constructor A
 		// automatically does a backflip as specified in constructor A
 		
@@ -159,13 +156,14 @@ private:
 	- class A declaring class B as a friend ("granting friendship to class B") allows class B's member functions access all of the members of an object of type A.
 		- friendship is not transitive (the friends of class B don't have special access to class A).
 	- **classes and nonmember functions need not have been declared before they are used in a friend declaration.**
+		- however, (as stated above) friend declarations do not constitute an actual declaration.
 	- class A can also specify which specific class B *member* function has special access by declaring only that member function as a friend (with the appropriate *ClassBName::* scope prefix).
 		- the definition of class B (with the declaration of the member function to be friended by class A) must come before the definition of class A (with the friend declaration for the member function in class B).
 		- the definition of class A must come before the definition of the member function in class B (that has special access to class A).
 
 
 ### misc conventions and tips
-- as a matter of style, use *struct* for classes intending for all of its members to be public and use *class* if we intend to have any private members.
+- as a matter of style, use *struct* for classes that contain only public data members and use *class* for everything else.
 - in general, *public* is related to interfacing and *private* is related to implementation.
 - group friend declarations together at the beginning or end of a class body.
 
@@ -200,9 +198,9 @@ private:
 		- once the compiler sees the prefix with the scope operator in a function name, the rest of the function definition is interpreted as being inside the scope of the class (we can access other members normally without extra qualifications).
 			- **this includes the parameter list but excludes the return type**, which could be a [type member](#additional-class-features).
 - member function **definitions** are processed **after** the compiler processes **all** of the **declarations** in the class.
-- **name lookup for class member *declarations*:**
+- **name lookup in class member *declarations*:**
 	- names *used* in declarations must be seen before they are used.
-	- when a declaration inside a class *uses* a name (i.e. as a type), the compiler first looks inside the class (before / above the name usage) for the declaration *for* that name.
+	- when a declaration inside a class *uses* a name (i.e. a type), the compiler first looks inside the class (before / above the name usage) for the declaration *for* that name.
 		- if it doesn't find it, it then looks for a declaration for that name in the enclosing scope(s).
 	- **definitions of type names should appear at the beginning of a class**, so any member declaration that uses that type will be seen after the type name has already been defined.
 - **name lookup inside class member *definitions*:**
@@ -215,14 +213,20 @@ private:
 		- *className::* can access a hidden member variable and *::* by itself can access a hidden name from the outer scope.
 		- **you shouldn't need to override anything if you choose names that won't hide each other when you don't want them to.**
 
-### misc conventions and tips
 
-
-## defining abstract data types (7.1)
+## static members
 
 ### new core ideas
 
 ### misc conventions and tips
+
+
+## tips for using a class
+- **when creating an object of class-type, don't confuse an object definition with a function declaration!**
+	- *MyClass obj();* declares a MyClass-returning function with no parameters.
+	- *MyClass obj;* creates a default-initialized object of type MyClass.
+	- *MyClass obj(val1, val2, val3);* creates an object of type MyClass that's initialized with the appropriate constructor.
+		- we can tell this isn't a function declaration because the parentheses enclose arguments instead of parameters (which would need types).
 
 
 ## things to follow up on
