add implicit conversions and update initialization forms

--- a/cpp_notebook/primer/ch-02.md
+++ b/cpp_notebook/primer/ch-02.md
@@ -80,6 +80,7 @@
 	- ***list initialization*** (C++11)
 		- braced lists of initializers can be used.
 		- the compiler will not let us *list initialize* variables of built-in type if the initializer might lead to the loss of information. (*int* type object can't be list-initialized with a *long double* initializer)
+	- [**initialization forms - direct vs copy**](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-03.md#library-string-type-32) (with std::string and std::vector as examples)
 - declaration vs definition
 	- **variables must be defined exactly once but can be declared multiple times.**
 	- *extern* keyword declares but does not define.
