--- a/cpp_notebook/primer/ch-03.md
+++ b/cpp_notebook/primer/ch-03.md
@@ -30,12 +30,16 @@ int main() {
 
 ### new core ideas
 - strings are not *containers*, but support many container operations.
-- string initialization
-	- *default initialize* to empty string (covered before in ch2).
-	- *copy initialize* copies the initializer on the right-hand side of an = sign. this can be used with a single initializer.
-	- *direct initialize* omits the = sign and can be used with initializers that consist of more than one value.
+- strings default initialize to the empty string.
+- **initialization forms** (general, not string-specific)
+	- ***copy initialization*** has an = sign and uses the right-side of the equal sign as the (single) initializing value.
+		- results in [implicit class-type conversion](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-07.md#additional-class-features), which library classes might allow (i.e. std::string does for string literals), but i think it introduces too much unknown behavior for using classes i define myself.
+	- ***direct initialization*** (shown below with parentheses) can be used with initializers that consist of one or more values.
+		- can also be used with brackets (see example with [vector](#library-vector-type-33))
+		- **stick with this form of initialization!**
+			- however, keep in mind [they can lead to the "most vexing parse" disambiguity problem.](https://en.cppreference.com/w/cpp/language/direct_initialization)
 ~~~
-// how i initialize a string
+// how i initialize a string (all direct initializations)
 string s1; // default initialization to the empty string
 string s2(s1); // s2 is a copy of s1
 string s3("value"); // s3 is a copy of the string literal
@@ -98,7 +102,6 @@ cout << punct_cnt << '\n';
 ~~~
 
 ### misc conventions and tips
-- direct initialize is preferred when initializing objects with multiple values (parameters?)
 - **avoid using signed *int* variables in library-overriden subscript operators *[ ]* or expressions that use *size()*.**
 - the C++ library incorporates the C library. the C++ version of C library headers are c*name* (remove the .h suffix and precede the name with the letter 'c').
 	- when we include *cctype*, we are actually including the C++ version of the C library header *ctype.h*. 
@@ -117,15 +120,17 @@ cout << punct_cnt << '\n';
 	- default initialize to an empty vector of the specified type.
 		- the most common way of using vector is to define an empty vector to which elements are added as their values become known at runtime.
 	- copy elements from another vector of the same type (using either direct or copy initialization like with strings)
-	- list initialize using { } curly braces (direct or copy initialization)
-	- direct initialize from a specified number of elements with each element value initialized.
+	- **list initialize** using { } curly braces (direct or copy initialization)
+		- if we use braces, but there is no way for the compiler to use the initializers to list initialize the object, the compiler would then try to use those initializers to construct the object (as if they were inside parentheses).
+			- **ensure that our bracketed list initializer actually performs list initialization!** (when that is our goal)
+	- direct initialize from a specified number of elements with each element [value initialized](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-02.md#variables-22).
 		- we also have the option of providing a default initial value for all elements.
 	- direct initialize from an array (using array pointers, see section below on arrays)
 ~~~
-// how i initialize a vector
+// how i initialize a vector (all direct initializations)
 vector<T> v1; // default initialize empty vector of type T
 vector<T> v2(v1); // v2 has a copy of each element in v1
-vector<T> v3 = {a, b, c}; // v3 is copy-list-initialized
+vector<T> v3{a, b, c}; // v3 is list-initialized
 vector<T> v4(n, val); // v4 has n elements each with value val
 vector<T> v5(n); // v5 has n elements each with type T's value-initializer
 vector<T> v6(begin(myIntArray), end(myIntArray)); // v6 is a vector corresponding to a separate int array
@@ -142,8 +147,6 @@ vector<T> v6(begin(myIntArray), end(myIntArray)); // v6 is a vector correspondin
 			- dictionary ordering like strings.
 
 ### misc conventions and tips
-- [direct initializers are generally more permissible, but can lead to the "most vexing parse" disambiguity problem.](https://en.cppreference.com/w/cpp/language/direct_initialization)
-	- for now stick with copy initialization and only use direct initialization when necessary.
 - be careful about curly braces vs parentheses!
 	- also, if we use braces, but there is no way for the compiler to use the initializers to list initialize the object, the compiler would then try to use those initializers to construct the object (as if they were inside parentheses).
 - vectors grow efficiently.
