--- a/cpp_notebook/primer/ch-07.md
+++ b/cpp_notebook/primer/ch-07.md
@@ -129,12 +129,13 @@ private:
 ### misc conventions and tips
 - **routinely use constructor initializer lists!**
 	- **in constructor initializer lists, avoid using members to initialize other members** when possible, as the order of initialization depends on unobvious factors (see above).
-- **the best way to specify default values for data members of class type (and built-in types?) is with in-class initializers.** (C++11)
+- **stick with in-class initializers to specify default values for data members of class type (and built-in types).** (C++11)
 	- only use default arguments in constructors if absolutely necessary.
 - **it is almost always right to explicitly provide a default constructor if other constructors are being defined.**
 - **rely on / request the synthesized default constructor only if you know it does the right thing.**
 	- when all built-in and compound-type data members have in-class initializers, members of other class-types have in-class intializers or <ins>known</ins> default constructors, etc.
 - constructors should usually not override in-class initializers except to provide a different initial value.
+- **declare single-argument constructors with the keyword *explicit* to suppress [implicit class-type conversions](#additional-class-features)!**
 
 ## access control and encapsulation
 
@@ -148,7 +149,7 @@ private:
 	- a class makes a function its friend by including a declaration for that function preceded by the keyword *friend* inside the class body.
 	- friend declarations do not automatically carry accross overloaded functions of the same name.
 	- friend functions (nonmember and member) don't become members of the class "granting friendship".
-		- friend declarations can appear anywhere inside the class body, unaffected by access control.
+		- friend declarations are **unaffected by access control** and can appear **anywhere** in a class body.
 	- **friend declarations only specify access and do not represent an actual general declaration.**
 		- actual general declarations (and definitions) usually follow the same convention as other ["nonmember functions that are conceptually part of the interface of a class"](#member-functions).
 - **class friendship**
@@ -156,21 +157,23 @@ private:
 	- class A declaring class B as a friend ("granting friendship to class B") allows class B's member functions access all of the members of an object of type A.
 		- friendship is not transitive (the friends of class B don't have special access to class A).
 	- **classes and nonmember functions need not have been declared before they are used in a friend declaration.**
+		- when a name first appears in a friend declaration, they are implicitly assumed to be a part of the surrounding scope.
 		- however, (as stated above) friend declarations do not constitute an actual declaration.
-	- class A can also specify which specific class B *member* function has special access by declaring only that member function as a friend (with the appropriate *ClassBName::* scope prefix).
-		- the definition of class B (with the declaration of the member function to be friended by class A) must come before the definition of class A (with the friend declaration for the member function in class B).
-		- the definition of class A must come before the definition of the member function in class B (that has special access to class A).
+	- **class member function friendship**
+		- class A can also specify which specific class B member function has special access by declaring only that member function as a friend (with the appropriate *ClassBName::* scope prefix).
+			- the definition of class B (with the declaration of the member function to be friended by class A) must come before the definition of class A (with the friend declaration for the member function in class B).
+			- the definition of class A must come before the definition of the member function in class B (that has special access to class A).
 
 
 ### misc conventions and tips
 - as a matter of style, use *struct* for classes that contain only public data members and use *class* for everything else.
 - in general, *public* is related to interfacing and *private* is related to implementation.
-- group friend declarations together at the beginning or end of a class body.
+- group friend declarations together in a class body (i think i personally prefer at the end).
 
 ## additional class features
 
 ### new core ideas
-- **type members** ([local type aliases](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-02.md#dealing-with-types-25)) can be defined by a class.
+- **type members** (local [type aliases](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-02.md#dealing-with-types-25)) can be defined by a class.
 	- subject to the same access controls as any other member (public indicates that we want external users to use that type name).
 	- usually defined at the beginning of a class definition (we can only use type aliases after they're defined).
 - ***mutable* data members** (specified by a *mutable* prefix keyword) are never const, even when they are members of a const object.
@@ -183,11 +186,18 @@ private:
 			- define (but not access) pointers and references to incomplete types.
 			- declare (but not define) functions that use incomplete types as a parameter/return type.
 		- this is also why **a class can't have data members of its own type, but can have pointers and references to its own type.**
-- 
-
+- **implicit class-type conversions (*bad!*)**
+	- for any given class, every constructor that can be called with a single argument defines an implicit conversion from the single argument's type *to* the class type.
+		- for example, for a given class A with one constructor with a single argument of type std::vector and another constructor with a single argument of type std::string, there are implicit conversions from std::vector and std::string to class type A.
+		- this implicit conversion means we can use an object of the type of the argument (std::string or std::vector) where an object of the class type A is actually expected.
+			- when that happens, the compiler automatically generates a *temporary* object of the class-type A to pass in as the std::string or std::vector.
+				- this could be a very hard bug to catch!
+	- **bottom line (at least for now as a beginner): do not allow implicit class-type conversions!!!**
+		- **declare single-argument constructors with the prefix keyword *explicit* to suppress implicit conversions.**
+			- side-effects: explicit constructors can only be used with [direct initialization (not copy initialization with an = sign)](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-03.md#library-string-type-32), and the compiler will not use this constructor in an automatic conversion (users will have to [explicitly cast](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-04.md#type-conversions) it to convert it).
 
 ### misc conventions and tips
-
+- [Google's C++ style guide](https://google.github.io/styleguide/cppguide.html#Implicit_Conversions) also does not allow implicit class-type conversions, so i think i'm safe just using *explicit* for all single-argument constructors for now.
 
 ## class scope
 
