more links for array

--- a/cpp_notebook/primer/ch-03.md
+++ b/cpp_notebook/primer/ch-03.md
@@ -218,12 +218,12 @@ for (auto iter = s.begin(); iter != s.end(); ++iter) {
 	- array declarators are of form *name[dim]*
 		- **dimension must be a constant expression greater than zero.**
 - initialization
-	- **arrays follow default initialization rules for built-in types (undefined if defined inside a function)**
+	- **arrays follow [default initialization](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-02.md#variables-22) rules for built-in types**
 	- we can explicitly initialize array elements using list initialization.
-		- don't need to specify dimension.
-		- specifying a dimension greater than the number of initializers in the list makes remaining elements value-initialized.
+		- don't need to specify dimension if the number of elements inside the bracketed list is the dimension we want.
+		- specifying a dimension greater than the number of initializers in the list makes remaining elements *value-initialized*.
 	- character arrays can be initialized from a string literal.
-		- automatically adds the **null character '\0'** at the end of every string literal!
+		- includes the **null character '\0'** at the end of every string literal!
 	- **we cannot copy-initialize an array from another array or assign arrays to each other.**
 		- inherited from C and/or [array-to-pointer decay](https://stackoverflow.com/questions/1461432/what-is-array-to-pointer-decay)?
 	- we cannot initialize an array from a vector, but we can initialize a vector from an array (see in vector section).
