--- a/cpp_notebook/primer/ch-07.md
+++ b/cpp_notebook/primer/ch-07.md
@@ -129,13 +129,13 @@ private:
 ### misc conventions and tips
 - **routinely use constructor initializer lists!**
 	- **in constructor initializer lists, avoid using members to initialize other members** when possible, as the order of initialization depends on unobvious factors (see above).
-- **stick with in-class initializers to specify default values for data members of class type (and built-in types).** (C++11)
+- **stick with in-class initializers to specify default values for (non[static](#static-class-members)) data members of class type (and built-in types).** (C++11)
 	- only use default arguments in constructors if absolutely necessary.
 - **it is almost always right to explicitly provide a default constructor if other constructors are being defined.**
 - **rely on / request the synthesized default constructor only if you know it does the right thing.**
 	- when all built-in and compound-type data members have in-class initializers, members of other class-types have in-class intializers or <ins>known</ins> default constructors, etc.
 - constructors should usually not override in-class initializers except to provide a different initial value.
-- **declare single-argument constructors with the keyword *explicit* to suppress [implicit class-type conversions](#additional-class-features)!**
+- **declare <ins>single-argument</ins> constructors with the keyword *explicit* to suppress [implicit class-type conversions](#additional-class-features)!**
 
 ## access control and encapsulation
 
@@ -181,7 +181,7 @@ private:
 - **forward declarations**
 	- a declaration of a class without a definition.
 		- *class ClassName;*
-	- before a definition is seen by the program, a type that is only declared is an *incomplete type*.
+	- before a definition is seen by the program, a type that is only declared is an ***incomplete type***.
 		- functionality for incomplete types is limited. we can only:
 			- define (but not access) pointers and references to incomplete types.
 			- declare (but not define) functions that use incomplete types as a parameter/return type.
@@ -193,8 +193,10 @@ private:
 			- when that happens, the compiler automatically generates a *temporary* object of the class-type A to pass in as the std::string or std::vector.
 				- this could be a very hard bug to catch!
 	- **bottom line (at least for now as a beginner): do not allow implicit class-type conversions!!!**
-		- **declare single-argument constructors with the prefix keyword *explicit* to suppress implicit conversions.**
+		- **declare <ins>single-argument</ins> constructors with the prefix keyword *explicit* to suppress implicit conversions.**
 			- side-effects: explicit constructors can only be used with [direct initialization (not copy initialization with an = sign)](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-03.md#library-string-type-32), and the compiler will not use this constructor in an automatic conversion (users will have to [explicitly cast](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-04.md#type-conversions) it to convert it).
+- aggregate classes and literal classes
+	- put off for now
 
 ### misc conventions and tips
 - [Google's C++ style guide](https://google.github.io/styleguide/cppguide.html#Implicit_Conversions) also does not allow implicit class-type conversions, so i think i'm safe just using *explicit* for all single-argument constructors for now.
@@ -224,19 +226,34 @@ private:
 		- **you shouldn't need to override anything if you choose names that won't hide each other when you don't want them to.**
 
 
-## static members
+## static class members
 
 ### new core ideas
-
+- static members are associated with the class itself instead of individual objects of the class type.
+	- prefix keyword ***static*** in the declaration of the member inside the class body.
+	- affected by access control like other members.
+- static member functions
+	- static member function definitions outside the class body should not have the *static* keyword (keyword only in the declaration inside the class body)!
+	- static member functions do not have a *this* pointer and can't be a const member function.
+- static data members are not initialized by any constructor (including synthesized default).
+	- **we must define (and initialize) each static data member outside the class body.**
+		- exceptions: static const integral types and static *constexpr* of literal type, which must be in-class initialized with a constant expression initializer.
+			- these should still be defined outside the class definition (in the source file?) to avoid unobvious scope errors.
+	- a static data member can have the same type as the class type of which it is a member ([incomplete type](#additional-class-features)).
+- we can access a class's static members directly through the scope operator.
+	- we can also use an object, reference, or pointer of the class type to access static members.
+	- other member functions of the class can use the class's static members directly without the scope prefix (see [class scope](#class-scope)).
+	
 ### misc conventions and tips
+- put the definition of static data members in the same file that contains the definitions of the class noninline member functions (source file).
 
 
-## tips for using a class
+## creating class objects
 - **when creating an object of class-type, don't confuse an object definition with a function declaration!**
 	- *MyClass obj();* declares a MyClass-returning function with no parameters.
 	- *MyClass obj;* creates a default-initialized object of type MyClass.
 	- *MyClass obj(val1, val2, val3);* creates an object of type MyClass that's initialized with the appropriate constructor.
 		- we can tell this isn't a function declaration because the parentheses enclose arguments instead of parameters (which would need types).
-
+- recall [forms of initialization](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-03.md#library-string-type-32) (use direct!)
 
 ## things to follow up on
