make distinction for nonstatic members

--- a/cpp_notebook/primer/ch-07.md
+++ b/cpp_notebook/primer/ch-07.md
@@ -12,8 +12,8 @@
 	- functions defined in the class are automatically [*inline*](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-06.md#other-features-65).
 - [**important info about scope**](#class-scope)
 - ***this***
-	- member functions are called on behalf of an object. (exception: static functions?)
-	- member functions access the object on which they were called through an implicit const pointer (to the object) named *this*.
+	- (non[static](#static-class-members)) member functions are called on behalf of an object.
+	- (nonstatic) member functions access the object on which they were called through an implicit const pointer (to the object) named *this*.
 		- inside the member function, we can refer directly to the members of the object on which the function was called.
 			- *memberName* is equivalent to an implicit *this->memberName*
 	- we can also return a dereferenced *this* to return the object as a whole from a member function.
