--- a/cpp_notebook/primer/ch-03.md
+++ b/cpp_notebook/primer/ch-03.md
@@ -125,7 +125,7 @@ cout << punct_cnt << '\n';
 			- **ensure that our bracketed list initializer actually performs list initialization!** (when that is our goal)
 	- direct initialize from a specified number of elements with each element [value initialized](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-02.md#variables-22).
 		- we also have the option of providing a default initial value for all elements.
-	- direct initialize from an array (using array pointers, see section below on arrays)
+	- direct initialize from iterators that point to a convertible element type (includes built-in array iterators, see section below on arrays)
 ~~~
 // how i initialize a vector (all direct initializations)
 vector<T> v1; // default initialize empty vector of type T
@@ -133,7 +133,7 @@ vector<T> v2(v1); // v2 has a copy of each element in v1
 vector<T> v3{a, b, c}; // v3 is list-initialized
 vector<T> v4(n, val); // v4 has n elements each with value val
 vector<T> v5(n); // v5 has n elements each with type T's value-initializer
-vector<T> v6(begin(myIntArray), end(myIntArray)); // v6 is a vector corresponding to a separate int array
+vector<T> v6(begin(otherContainer), end(otherContainer)); // v6 is a vector corresponding to a separate container
 ~~~
 
 - vector operations
